--- a/making-with-type/style.css
+++ b/making-with-type/style.css
@@ -33,7 +33,7 @@ div.subheading{
     font-size: 90px;
 }
 
-div.gradient{
+div.gradient.random.four{
     margin-left: auto;
     margin-right: auto;
     text-align:center;
@@ -41,9 +41,23 @@ div.gradient{
     width: 90%;
     height: auto;
     font-size: 90pt;
-    font-family:'source code pro';
+    font-family:'manifont grotsesk';
+    padding-top: 10px;
 
 }
+div.gradient.random.four{
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+    color:linear-gradient(to bottom right, #5b4291, #d1448d, #cc9b27 );
+    width: 90%;
+    height: auto;
+    font-size: 90pt;
+    font-family:'manifont grotesk';
+
+}
+
+
 
 
 div.try{
@@ -84,7 +98,7 @@ div.col.b{
     
 }
 div.one{
-    background: linear-gradient(to bottom right, #5b4291, #d1448d, #cc9b27 );;
+    background: linear-gradient(to bottom right, #5b4291, #d1448d, #cc9b27 );
     
 }
 div.two{
