--- a/wild-web/style.css
+++ b/wild-web/style.css
@@ -1,9 +1,9 @@
 /* setup */
 
 body{
-    background-color: rgb(251, 235, 208);
+    background-color: rgb(171, 180, 187);
     color: rgb(16, 16, 15);
-    margin: 0px;
+    margin: 10px;
     padding: 0px;
     font-size: 20px;
     line-height: 21px;
@@ -20,13 +20,13 @@ img{
 /* typography */
 
 div.largetext{
-    font-size: 100px;
-    line-height: 90px;
+    font-size: 90px;
+    line-height: 95px;
 
 }
 div.mediumtext{
-    font-size: 50px;
-    line-height: 50px;
+    font-size: 27px;
+    line-height: 32px;
 
 }
 div.smalltext{
@@ -53,7 +53,15 @@ div.textbrown{
 }
 
 div.textwhite{
-    color: rgb(255, 255, 255);
+    color: rgb(171, 180, 187);
+}
+
+div.textyellow{
+    color: rgb(255, 223, 95);
+}
+
+div.textpurple{
+    color: rgb(91, 23, 76);
 }
 
 div.textburgundy{
@@ -61,12 +69,17 @@ div.textburgundy{
 }
 
 div.bggray{
-    background-color: rgb(155, 142, 126);
+    background-color: rgb(69, 76, 59);
+    padding: 10px;
 }
 
 div.bgwhite{
     background-color: white;
 }
+
+div.bgburgundy{
+    background-color: rgb(85, 34, 34);
+} 
 
 /* widths */
 
@@ -92,6 +105,7 @@ div.w60{
 
 div.w50{
     width: 50%;
+   
 }
 
 div.w40{
@@ -109,6 +123,110 @@ div.w25{
 div.w20{
     width: 20%;
 }
+/* moving */
+
+div.containerone{
+    display: flex;
+    flex: wrap;
+    align-items: center;
+    height: 20vh;
+    overflow: hidden;
+
+}
+
+.scroll{
+    display: flex;
+    white-space: nowrap;
+    margin: 0 2em;
+
+}
+
+.scroll div{
+    display: flex;
+    gap: 2em;
+}
+
+.scroll p{
+    font-size: 90px;
+    
+}
+div.RightToLeft{
+    animation: RightToLeft 20s infinite linear;
+}
+
+@keyframes RightToLeft{
+    from{
+        transform: translate(0%);
+    }
+    to{
+        transform: translate(-50%);
+    }
+}
 
 /* design */
 
+div.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+div.page{
+    height: 100vh;
+    overflow: scroll;
+}
+
+div.padding{
+    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+div.side{
+    margin-left: auto;
+}
+
+div.middle{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.subtitle{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+div.title{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+div.body{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+ div.p5{
+    padding: 5px;
+ }
+
+ div.p10{
+    padding: 10px;
+ }
+ 
+ div.pside{
+    padding-left: 50px;
+ }
+
+ div.ptop{
+    padding-top: 20px;
+ }
+
+ div.pbottom{
+    padding-bottom: 50px;
+ }
+
+ div.ptoptwo{
+    padding-top: 60px;
+ }
