--- a/wild-web/style.css
+++ b/wild-web/style.css
@@ -11,9 +11,9 @@
 
 body{
     background-color: rgb(255, 255, 255);
-    background-image: url(images/page.png) ;
+    background-image: url(images/page\ 3.png) ;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size: 1500px;
     color: rgb(16, 16, 15);
     margin: 10px;
     padding: 0px;
